--- a/Advantage.API.csproj
+++ b/Advantage.API.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>User-Secret-ID</UserSecretsId>
+    <UserSecretsId>Advantage-API-Secrets</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
